# GoonEngine

./: .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
game/: CMakeLists.txt  main.cpp
game/src/: main.cpp
goon/: CMakeLists.txt
goon/src/: main.cpp  test.cpp  test.hpp
goon/src/Goon/Renderer/: Buffer.cpp  Buffer.hpp  RenderCommand.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
goon/src/Goon/Window/: WindowApi.hpp
goon/src/Goon/core/: Application.cpp  Application.hpp  Log.cpp  Log.hpp  asset.hpp  asset_manager.cpp  asset_manager.hpp  bgm_asset.cpp  bgm_asset.hpp  guid.cpp  guid.hpp  image_asset.cpp  image_asset.hpp
goon/src/Goon/scene/: GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp
goon/src/Goon/scene/components/: BgmComponent.hpp  HierarchyComponent.hpp  IdComponent.hpp  InactiveComponent.hpp  TagComponent.hpp  TransformComponent.hpp
goon/src/Goon/scripting/: InternalCalls.cpp  InternalCalls.hpp
goon/src/Goon/systems/: ScriptSystem.cpp  ScriptSystem.hpp  SoundSystem.cpp  SoundSystem.hpp
goon/src/GoonPlatforms/Rendering/: RendererApi.hpp
goon/src/GoonPlatforms/Rendering/OpenGL/: OpenGL.cpp  OpenGL.hpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
goon/src/GoonPlatforms/Window/: SdlWindow.cpp  SdlWindow.hpp  SdlWindowApi.cpp  SdlWindowApi.hpp  WindowApi.cpp  WindowApi.hpp
goon/src/GoonScripting/: InternalCalls.cs
goon/src/GoonTools/: io.cpp  io.hpp
goon/src/imgui/backends/: imgui_impl_sdlrenderer.cpp
supergoon/: CMakeLists.txt  template.Makefile  template.csproj  template.yml
supergoon/src/: main.cpp
supergoon/src/Supergoon/commands/: Action.hpp
supergoon/src/Supergoon/layers/: EditorLayer.cpp  EditorLayer.hpp
supergoon/src/Supergoon/panels/: HierarchyPanel.cpp  HierarchyPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MenuBarPanel.cpp  MenuBarPanel.hpp  Panel.hpp
supergoon/src/imgui/: builder.cpp
supergoon/src/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl2.cpp
